Add universities section to landing page

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     section.section{padding:60px 0;border-bottom:1px solid var(--line)}
     .title{font-size:26px;font-weight:800;margin:0 0 12px}
     .deck{color:var(--muted);margin:0 0 18px}
+    .section-cta{margin-top:24px;display:flex;flex-direction:column;align-items:flex-start;gap:8px}
+    .section-cta .helper{font-size:13px;color:var(--muted)}
 
     /* COMFORT */
     .cards{display:grid;grid-template-columns:repeat(3,1fr);gap:16px}
@@ -213,6 +215,30 @@
           <p class="plan-desc">🟢 For job seekers who want a more detailed, data-backed job search experience.</p>
           <div class="price-cta"><a class="btn secondary" href="#pricing">Join the Pro+ Waitlist</a></div>
         </div>
+      </div>
+    </section>
+
+    <!-- UNIVERSITIES -->
+    <section class="section" id="universities">
+      <h2 class="title">JobSprint for University Placement Teams</h2>
+      <p class="deck">A single dashboard to track student progress, eligibility, counselling, and placement outcomes — without messy spreadsheets.</p>
+      <div class="cards">
+        <article class="card">
+          <h3>Student-level placement funnels</h3>
+          <p>Track Applied → Interview → Offer stages for every student across companies.</p>
+        </article>
+        <article class="card">
+          <h3>Eligibility &amp; intervention visibility</h3>
+          <p>Filter by eligibility criteria and flag at-risk students for timely outreach.</p>
+        </article>
+        <article class="card">
+          <h3>Counselling workflows</h3>
+          <p>Schedule sessions, capture notes, and keep workflows calendar-friendly.</p>
+        </article>
+      </div>
+      <div class="section-cta">
+        <a class="btn primary" href="/request-demo">Request a demo</a>
+        <div class="helper">Early institutional pilots in progress.</div>
       </div>
     </section>
 
