--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         </article>
       </div>
       <div class="section-cta">
-        <a class="btn primary" href="/request-demo">Request a demo</a>
+        <a class="btn primary" href="https://docs.google.com/forms/d/e/1FAIpQLScd_p3ct-xf9ZCJ9JRewzgZUUPeA7tSbESBBLq6NSrfBLsxhg/viewform?usp=dialog">Request a demo</a>
         <div class="helper">Early institutional pilots in progress.</div>
       </div>
     </section>
